#2696 - Document-level recommendations
- Cleaning up document metadata sidebar code